[package]
name = "volt-cad-cli"
description = "The volt-cad command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "volt-cad"
path = "src/main.rs"

[dependencies]
volt-cad-core = { workspace = true }
volt-cad-freecad = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
