[package]
name = "volt-cli"
description = "The volt-eda command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "volt-eda"
path = "src/main.rs"

[dependencies]
volt-core = { workspace = true }
volt-import = { workspace = true }
volt-erc = { workspace = true }
volt-drc = { workspace = true }
volt-export = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
