[package]
name = "volt-drc"
description = "Design rule checking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volt-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
