[package]
name = "volt-export"
description = "Gerber, BOM, pick & place, D-356 netlist export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volt-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
