[package]
name = "volt-import"
description = "KiCad and LibrePCB library importers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volt-core = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
