[package]
name = "volt-refill"
description = "Zone refill engine for Volt EDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volt-core = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
i_overlay = "4.5"

[dev-dependencies]
chrono = { workspace = true }
